objects/Campaign__c/Campaign__c.object-meta.xml
<CustomObject>
    <description>This is Campaign object.</description>
    <label>JS Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>JS Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>