objects/Campaign__c/fields/Budgeted_Cost__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Budgeted Cost (Jobs Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>