objects/Campaign__c/fields/Business_Unit_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Campaign__c</fullName>
    <label>Business Unit - Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>