objects/Campaign__c/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <label>Campaign Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>