objects/Campaign__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description old</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>