objects/Campaign__c/fields/Dummy_Currency_1__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Currency_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is Dummy Currency field.</description>
    <label>Budgeted Campaign Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>