objects/Campaign__c/fields/Dummy_Currency_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Currency_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dummy Currency 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>