objects/Campaign__c/fields/Dummy_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_2__c</fullName>
    <description>This is dummy date field 2. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Date 2</label>
    <type>Date</type>
</CustomField>