objects/Campaign__c/fields/Dummy_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Date_3__c</fullName>
    <description>This is dummy date field 3. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Date 3</label>
    <type>Date</type>
</CustomField>