objects/Campaign__c/fields/Dummy_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_2__c</fullName>
    <description>This is dummy text field 2. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>