objects/Campaign__c/fields/Dummy_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Text_3__c</fullName>
    <description>This is dummy text field 3. It will be used as a variable field in subscriber org.</description>
    <label>Dummy Text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>