objects/Campaign__c/fields/Job_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Job_Estimates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field summarizes the estimate total of job related to campaign.</description>
    <label>Job Estimates</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>