objects/Campaign__c/fields/Workdocs_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Workdocs_Folder_Id__c</fullName>
    <label>Workdocs Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>