objects/Campaign__c/validationRules/Campaign_Name_Length_45.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Name_Length_45</fullName>
    <active>true</active>
    <description>Campaign Name must not be greater than 45 characters.</description>
    <errorConditionFormula>LEN( Name)  &gt; 45</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name should not be more than 45 characters</errorMessage>
</ValidationRule>