objects/Campaign__c/validationRules/Start_Date_must_be_less_than_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_must_be_less_than_End_Date</fullName>
    <active>true</active>
    <description>Start date must be less than Due Date</description>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>