objects/Campaign__c/listViews/Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Dummy_Currency_1__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Campaign_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Campaigns</label>
</ListView>