objects/Campaign__c/listViews/Cancelled_Campaigns.listView-meta.xml
<ListView>
    <fullName>Cancelled_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Campaigns</label>
</ListView>