objects/Campaign__c/listViews/Completed_Campaigns.listView-meta.xml
<ListView>
    <fullName>Completed_Campaigns</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Campaigns</label>
</ListView>